Block versioning: Introduce a migration function

--- a/blocks/test/fixtures/core__quote__style-2.html
+++ b/blocks/test/fixtures/core__quote__style-2.html
@@ -1,3 +1,3 @@
-<!-- wp:core/quote {"style":"2"} -->
+<!-- wp:core/quote {"isLarge":true} -->
 <blockquote class="wp-block-quote is-large"><p>There is no greater agony than bearing an untold story inside you.</p><cite>Maya Angelou</cite></blockquote>
 <!-- /wp:core/quote -->
