--- a/blocks/test/fixtures/core__quote__style-2.serialized.html
+++ b/blocks/test/fixtures/core__quote__style-2.serialized.html
@@ -1,4 +1,4 @@
-<!-- wp:quote {"style":2} -->
+<!-- wp:quote {"isLarge":true} -->
 <blockquote class="wp-block-quote is-large">
     <p>There is no greater agony than bearing an untold story inside you.</p><cite>Maya Angelou</cite></blockquote>
 <!-- /wp:quote -->
